InsureFlow360/force-app/main/default/objects/Insurance_Policy__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Insurance Policies</relationshipLabel>
    <relationshipName>Insurance_Policies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>