InsureFlow360/force-app/main/default/objects/Insurance_Policy__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <inlineHelpText>Enter the End Date.</inlineHelpText>
    <type>Date</type>
</CustomField>