InsureFlow360/force-app/main/default/objects/Insurance_Policy__c/fields/Expiring_In_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Expiring_In_30_Days__c</fullName>
    <formula>End_Date__c = (TODAY() + 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiring In 30 Days</label>
    <inlineHelpText>Check this box if Expiring In 30 Days.</inlineHelpText>
    <type>Checkbox</type>
</CustomField>