InsureFlow360/force-app/main/default/objects/Insurance_Policy__c/fields/Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Amount__c</fullName>
    <label>Premium Amount</label>
    <inlineHelpText>Enter the Premium Amount amount.</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>