InsureFlow360/force-app/main/default/objects/Insurance_Policy__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <inlineHelpText>Enter the Start Date.</inlineHelpText>
    <type>Date</type>
</CustomField>