InsureFlow360/force-app/main/default/objects/Insurance_Policy__c/recordTypes/Health_Policy.recordType-meta.xml
<RecordType>
    <fullName>Health_Policy</fullName>
    <active>true</active>
    <description>Health insurance policies</description>
    <label>Health Policy</label>
</RecordType>