InsureFlow360/force-app/main/default/objects/Insurance_Policy__c/recordTypes/Life_Policy.recordType-meta.xml
<RecordType>
    <fullName>Life_Policy</fullName>
    <active>true</active>
    <label>Life Policy</label>
</RecordType>