InsureFlow360/force-app/main/default/objects/Insurance_Policy__c/recordTypes/Vehicle_Policy.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Policy</fullName>
    <active>true</active>
    <label>Vehicle Policy</label>
</RecordType>