InsureFlow360/force-app/main/default/objects/Insurance_Policy__c/validationRules/Premium_Amount_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Premium_Amount_positive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Premium_Amount__c)), Premium_Amount__c > 0)</errorConditionFormula>
    <errorDisplayField>Premium_Amount__c</errorDisplayField>
    <errorMessage>Premium amount must be greater than zero.</errorMessage>
</ValidationRule>