InsureFlow360/force-app/main/default/objects/Insurance_Policy__c/validationRules/Validate_Policy_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Policy_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be earlier than Start Date.</errorMessage>
</ValidationRule>